--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,11 @@
     position: relative;
 }
 
+.header__logo-link {
+    width: 38px;
+    height: 38px;
+}
+
 .header__logo {
     padding: 0;
     margin: 0;
