--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -5,6 +5,23 @@
     padding: 0 70px;
 }
 
+.cards__text-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: calc(100vh - 488px);
+}
+
+.cards__text {
+    margin: 0;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    color: #A0A0A0;
+}
+
 .cards__list {
     margin: 0;
     padding: 70px 0 30px;
@@ -49,6 +66,10 @@
     .cards {
         padding: 0 30px;
     }
+
+    .cards__text-container {
+        height: calc(100vh - 496px);
+    }
     
     .cards__list {
         grid-template-columns: repeat(2, minmax(min-content, max-content));
@@ -59,6 +80,10 @@
 @media screen and (max-width: 564px) {
     .cards {
         padding: 0 10px;
+    }
+
+    .cards__text-container {
+        height: calc(100vh - 577px);
     }
     
     .cards__list {
