--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -12,10 +12,18 @@
     gap: 30px;
 }
 
-.about-me__info {
-    max-width: 600px;
+.about-me__content {
     box-sizing: border-box;
+    max-width: 600px;
     margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.about-me__info {
+    width: 100%;
+    box-sizing: border-box;
     position: relative;
 }
 
@@ -41,7 +49,6 @@
 .about-me__description {
     width: 100%;
     margin: 0;
-    /* margin: 0 0 77px; */
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -50,7 +57,6 @@
 
 .about-me__link {
     margin: 0;
-    align-self: flex-end;
     font-style: normal;
     text-decoration: none;
     font-weight: 500;
@@ -59,9 +65,6 @@
     color: #000;
     cursor: pointer;
     transition: 0.2s;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .about-me__link:hover {
@@ -75,17 +78,13 @@
     border-radius: 10px;
 }
 
-@media screen and (max-width: 1152px) {
-    
-}
-
 @media screen and (max-width: 896px) {
 
     .about-me {
         padding: 90px 50px;
     }
 
-    .about-me__info {
+    .about-me__content {
         max-width: 364px;
     }
 
@@ -102,7 +101,6 @@
     }
 
     .about-me__description {
-        /* margin: 0 0 87px; */
         font-size: 12px;
         line-height: 150%;
     }
@@ -119,7 +117,7 @@
         gap: 40px;
     }
 
-    .about-me__info {
+    .about-me__content {
         max-width: 100%;
         order: 2;
     }
@@ -157,6 +155,7 @@
     }
 
     .about-me__description {
+        margin-bottom: 40px;
         font-size: 11px;
         line-height: 145%;
     }
