--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -2,7 +2,7 @@
     width: 100%;
     box-sizing: border-box;
     padding: 27px 0 44px;
-}
+}    
 
 .filter__label {
     display: inline-block;
@@ -25,6 +25,12 @@
     font-size: 13px;
     line-height: 138%;
     padding-left: 49px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.filter__slider:hover {
+    opacity: 0.7;
 }
 
 .filter__slider::before {
@@ -61,11 +67,6 @@
     background-color: #FFFFFF;
     left: 23px;
 }
-
-/* .filter__checkbox:focus + .filter__slider::before {
-    outline: 1px solid #3456F3;
-    outline-offset: 2px;
-} */
 
 @media screen and (max-width: 896px) {
     .search__filter {
