--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,6 +11,12 @@
 .header__logo-link {
     width: 38px;
     height: 38px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.header__logo-link:hover {
+    opacity: 0.8;
 }
 
 .header__logo {
@@ -23,6 +29,8 @@
 }
 
 .header__links {
+    display: flex;
+    align-items: center;
     margin-left: auto;
     font-style: normal;
     font-weight: 500;
