--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,23 +1,21 @@
 .menu {
-    margin-left: auto;
+   width: calc(100% - 100px);
+   margin-left: auto;
 }
 
 .menu__navigation {
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     box-sizing: border-box;
 }
 
 .menu__list {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     box-sizing: border-box;
     display: flex;
     gap: 16px;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     list-style: none;
 }
@@ -53,13 +51,14 @@
     .menu__navigation {
         position: fixed;
         flex-direction: column;
+        justify-content: space-between;
         top: 0;
         right: -100%;
         bottom: 0;
         width: 67.7%;
         height: 100%;
         margin: 0;
-        padding: 0;
+        padding: 159px 90px 92px;
         background-color: #FAFAFA;
         transition: all 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
         z-index: 10;
@@ -71,9 +70,6 @@
     
     .menu__list {
         width: 100%;
-        left: 50%;
-        top: 159px;
-        transform: translateX(-50%);
         flex-direction: column;
         align-items: center;
         gap: 28px;
@@ -109,6 +105,10 @@
         background-color: transparent;
         cursor: pointer;
         transition: 0.2s;
+    }
+
+    .menu__button:hover {
+        opacity: 0.7;
     }
 
     .menu__button_type_open {
@@ -154,6 +154,7 @@
 @media screen and (max-width: 564px) {
     .menu__navigation {
         width: 100%;
+        padding: 144px 10px 48px;
     }
 
     .menu__list {
