--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -75,14 +75,29 @@
     background-image: url(../../images/element_delete-button.svg);
 }
 
-.element__photo {
+.element__link {
     width: 100%;
     height: 203px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.element__link:hover {
+    opacity: 0.8;
+}
+
+.element__photo {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
 @media screen and (max-width: 896px) {
-    .element__photo {
+    .element {
+        height: 258px;
+    }
+
+    .element__link {
         height: 190px;
     }
 }
@@ -91,8 +106,12 @@
     .cards__element {
         max-width: 364px;
     }
-    
-    .element__photo {
+
+    .element {
+        height: 236px;
+    }
+
+    .element__link {
         height: 168px;
     }
 }
