--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -42,6 +42,10 @@
     outline: none;
 }
 
+.search__input:focus {
+    border-bottom: 1px solid #3456F3;
+}
+
 .search__input::placeholder {
     color: #A0A0A0;
 }
