--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -35,6 +35,12 @@
     line-height: 17px;
     text-align: center;
     color: #3456F3;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.not-found__button:hover {
+    opacity: 0.7;
 }
 
 @media screen and (max-width: 896px) {
