--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -140,14 +140,14 @@
     color: #A0A0A0;
 }
 
-.auth__link {
-    cursor: pointer;
-    color: #3456F3;
-    text-decoration: none;
-}
-
 .auth__nav-button {
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
     color: #3456F3;
+    cursor: pointer;
+    transition: 0.2s;
 }
 
 @media screen and (max-width: 896px) {
