--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -116,15 +116,14 @@
 .profile__button {
     display: block;
     box-sizing: border-box;
-    margin: 0 auto 16px;
+    border: none;
+    background-color: transparent;
+    max-width: 410px;
     padding: 0;
     font-style: normal;
-    font-weight: 400;
     font-size: 13px;
     line-height: 16px;
     text-align: center;
-    border: none;
-    background-color: transparent;
     cursor: pointer;
     transition: 0.2s;
 }
@@ -133,27 +132,15 @@
     opacity: 0.7;
 }
 
-.profile__link {
-    display: block;
+.profile__button_type_toggle {
+    margin: 0 auto 16px;
+    font-weight: 400;
+}
+
+.profile__button_type_exit {
     margin: 0 auto 70px;
-    max-width: 410px;
-    text-decoration: none;
     color: #EE3465;
-    font-style: normal;
     font-weight: 500;
-    font-size: 13px;
-    line-height: 16px;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.2s;
-}
-
-.profile__link:hover {
-    opacity: 0.7;
-}
-
-.profile__nav-button {
-    color: #EE3465;
 }
 
 @media screen and (max-width: 896px) {
@@ -161,16 +148,12 @@
         margin: 236px auto 78px;
     }
 
-    .profile__link {
+    .profile__button_type_exit {
         margin-bottom: 269px;
     }
 
     .profile__submit-button {
         margin-top: 98px;
-    }
-
-    .profile__button_active {
-        margin-top: 164px;
     }
 }
 
@@ -192,16 +175,12 @@
         margin-top: 267px;
     }
 
-    .profile__button {
+    .profile__button_type_toggle {
         font-size: 12px;
         line-height: 15px;
     }
 
-    .profile__button_active {
-        margin-top: 332px;
-    }
-
-    .profile__link {
+    .profile__button_type_exit {
         font-size: 12px;
         line-height: 15px;
         margin-bottom: 40px;
