--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -8,7 +8,7 @@
     padding: 0;
     display: flex;
     width: 100%;
-    max-width: 364px;
+    width: 364px;
     flex-direction: column;
     box-sizing: border-box;
     background-color: #FFF;
@@ -22,6 +22,7 @@
 }
 
 .element__title {
+    max-width: 220px;
     margin: 0 0 9px;
     font-style: normal;
     font-weight: 500;
@@ -93,7 +94,13 @@
 }
 
 @media screen and (max-width: 896px) {
+    .cards__element {
+        width: 339px;
+    }
+
+    
     .element {
+        width: 339px;
         height: 258px;
     }
 
@@ -104,10 +111,11 @@
 
 @media screen and (max-width: 564px) {
     .cards__element {
-        max-width: 364px;
+        width: 300px;
     }
 
     .element {
+        width: 300px;
         height: 236px;
     }
 
