--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -62,6 +62,13 @@
     opacity: 0.8;
 }
 
+@media screen and (max-width: 1279px) {
+    .cards__list {
+        grid-template-columns: repeat(2, minmax(min-content, max-content));
+        gap: 36px 30px;
+    }
+}
+
 @media screen and (max-width: 896px) {
     .cards {
         padding: 0 30px;
@@ -71,9 +78,19 @@
         padding: 350px 0 380px;
     }
     
-    .cards__list {
+    /* .cards__list {
         grid-template-columns: repeat(2, minmax(min-content, max-content));
         gap: 36px 30px;
+    } */
+}
+
+@media screen and (max-width: 767px) {
+    .cards__list {
+        padding-top: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
     }
 }
 
@@ -86,13 +103,13 @@
         padding: 220px 0 255px;
     }
     
-    .cards__list {
+    /* .cards__list {
         padding-top: 40px;
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 16px;
-    }
+    } */
 
     .cards__loading-button {
         width: 240px;
